cambiando color de fondo violeta a negro en pagina escuchar audios aldu

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -22,7 +22,7 @@
         /* Estilos generales del cuerpo */
         body {
             font-family: 'Raleway', sans-serif;
-            background: #772ce8;
+            background: black;
             color: #fff;
             margin: 0;
             padding: 0;
