agregando warning de username en pagina aldu

--- a/Aldu/grabarAudio/index.html
+++ b/Aldu/grabarAudio/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div id="rememberAlert">
-        <h4>Acordate de poner el Username antes de enviar el audio/imagen/texto</h4>
+        <h4>Acordate de llenar el campo de Username antes de enviar el audio/imagen/texto</h4>
     </div>
 
     <div id="anonymInstructions">
