agregando indicacion de anonimoc on palabra clave

--- a/Aldu/grabarAudio/index.html
+++ b/Aldu/grabarAudio/index.html
@@ -54,7 +54,7 @@
             <h4>El botón "ELEGIR IMAGEN" sirve para adjuntar imágenes relacionadas a la historia.</h4>
         </div>
         <div>
-            <h4>Si querés mandar un audio ANÓNIMO, insertá de usuario "ANONIMO".</h4>
+            <h4>Si querés mandar un audio ANÓNIMO, insertá de usuario "ANÓNIMO" y alguna palabra relacionada a tu anécdota para diferenciarte de los demás.</h4>
         </div>
         <div>
             <h5>Tené en cuenta que si es ANÓNIMO y mandás más de 1 audio, tenés que poner alguna palabra clave.</h5>
