agregando pagina mari

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -389,7 +389,31 @@
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Gerardo Matraca 3_1720454971115.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/texto1.txt')">TEXTO</button>
+            </div>
+
+            <div class="user-card color1">
+                <h3>Konito96</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Konito96.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color4">
+                <h3>Slynack</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>Milanario</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Milanario.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/audios/Milanario.jpg?raw=true'])">FOTOS</button>
             </div>
             
             <!--
@@ -400,6 +424,7 @@
                     Tu navegador no admite el elemento de audio.
                 </audio>
                 <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/audios/JulianPZ7_1719177193975_Captura de pantalla 2024-03-20 014111.png?raw=true'])">FOTOS</button>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/ANONIMO1.txt')">TEXTO</button>
             </div>
             -->
         </div>
