agregando textos aldu

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -380,6 +380,20 @@
                 <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/pinga.txt')">TEXTO</button>
             </div>
 
+            <div class="user-card color2">
+                <h3>ludmi</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/ludmi.txt')">TEXTO</button>
+            </div>
+            
+            <div class="user-card color3">
+                <h3>NK</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/nk.txt')">TEXTO</button>
+            </div>
+
+            <div class="user-card color1">
+                <h3>Sapa</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/sapa.txt')">TEXTO</button>
+            </div>
             
             <!-- 
             <div class="user-card color3">
