agregando a paginas mari y aldu

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -394,6 +394,11 @@
                 <h3>Sapa</h3>
                 <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/sapa.txt')">TEXTO</button>
             </div>
+
+            <div class="user-card color4">
+                <h3>Gonzita</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/gonzita.txt')">TEXTO</button>
+            </div>
             
             <!-- 
             <div class="user-card color3">
