--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -415,6 +415,14 @@
                 </audio>
                 <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/audios/Milanario.jpg?raw=true'])">FOTOS</button>
             </div>
+
+            <div class="user-card color3">
+                <h3>Brandonlucciano</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/brandonlucciano.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
             
             <!--
             <div class="user-card color2">
