fixing aldu y mari agregaods

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -396,7 +396,7 @@
             </div>
 
             <div class="user-card color4">
-                <h3>Gonzita</h3>
+                <h3>Gonzitax</h3>
                 <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/gonzita.txt')">TEXTO</button>
             </div>
             
