--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -417,7 +417,7 @@
             </div>
 
             <div class="user-card color3">
-                <h3>Brandonlucciano</h3>
+                <h3>Brandon Lucciano</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/brandonlucciano.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
