--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -400,6 +400,11 @@
                 <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/gonzita.txt')">TEXTO</button>
             </div>
             
+            <div class="user-card color4">
+                <h3>dantesito</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/dantesito.txt')">TEXTO</button>
+            </div>
+
             <!-- 
             <div class="user-card color3">
                 <h3>blito</h3>
