agregando content a pagina aldu y mari

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -402,6 +402,14 @@
             <div class="user-card color4">
                 <h3>Slynack</h3>
                 <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack(primera parte).wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color1">
+                <h3>Slynack 2</h3>
+                <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/slynack.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
