--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -304,13 +304,13 @@
             padding: 20px;
             border-radius: 15px;
             text-align: center;
-            overflow-y: auto; /* Permite desplazamiento vertical */
-            word-wrap: break-word; /* Fuerza a que las palabras largas se dividan */
-            word-break: break-all; /* Rompe palabras largas para evitar scroll horizontal */
             border: 3px solid #fff; /* Borde blanco exterior */
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow-y: auto; /* Habilita el desplazamiento vertical */
+            white-space: pre-wrap; /* Preserva los saltos de línea y ajusta las palabras */
+            max-height: 300px; /* Ajusta este valor según sea necesario */
         }
 
         #textContainer {
@@ -318,8 +318,9 @@
             width: 100%;
             text-align: left; /* Para asegurar que el texto sea alineado a la izquierda */
             border: none; /* Elimina el borde del contenedor de texto interno */
+            word-wrap: break-word; /* Evita que las palabras largas se corten */
+            overflow-wrap: break-word; /* Evita que las palabras largas se corten */
         }
-
 
 
         .emote {
