agregando content a pagina aldu

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -376,8 +376,8 @@
             </div>
             
             <div class="user-card color3">
-                <h3>dantesito</h3>
-                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/dantesito.txt')">TEXTO</button>
+                <h3>pinga</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/pingo.txt')">TEXTO</button>
             </div>
 
             <!-- 
