cambiando tematica pagina aldu

--- a/Aldu/grabarAudio/index.html
+++ b/Aldu/grabarAudio/index.html
@@ -24,7 +24,8 @@
             <h2>Aldi Resuelve</h2>
         </div>
         <div>
-            <h3>Manda un audio contando algun problema amoroso que tengas actualmente</h3>
+            <h3>Manda un audio o texto diciendo alguna cosa que</h3>
+            <h3>para la sociedad esten normalizadas pero para vos sean una redflag</h3>
         </div>
     </div>
     
