Subiendo textos aldu

--- a/Aldu/escucharAudios/index.html
+++ b/Aldu/escucharAudios/index.html
@@ -380,6 +380,21 @@
                 <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/Rxbbit.txt')">TEXTO</button>
             </div>
 
+            <div class="user-card color1">
+                <h3>Anonimo</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/anonimo.txt')">TEXTO</button>
+            </div>
+
+            <div class="user-card color2">
+                <h3>Anonimo Virgo</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/anonimoVirgo.txt')">TEXTO</button>
+            </div>
+            
+            <div class="user-card color4">
+                <h3>Blito</h3>
+                <button onclick="showText('https://raw.githubusercontent.com/daantesiito/daantesiito.github.io/main/Aldu/escucharAudios/textFiles/Blito.txt')">TEXTO</button>
+            </div>
+
             <!-- 
             <div class="user-card color3">
                 <h3>blito</h3>
