--- a/7tv/index.html
+++ b/7tv/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de Emotes 7tv</title>
+    <title>EMOTE PRUEBAS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <input type="text" id="searchBar" placeholder="Buscar emote...">
-        <div id="emotePreview"></div>
-        <div id="selectedEmote"></div>
+        <h1>7TV Emote Pruebas</h1>
+        <input type="text" id="emoteSetID" placeholder="Ingrese el ID del set de emotes">
+        <button id="loadEmotes">Cargar Set</button>
+
+        <input type="text" id="searchBar" placeholder="Buscar emote..." disabled>
+
+        <div id="previewArea"></div>
+        <div id="selectedEmotes"></div>
+        <div>
+            <h3>made by dantesito</h3>
+        </div>
     </div>
+    
+
     <script src="script.js"></script>
 </body>
 </html>
