actuualizar pagina aldu

--- a/Aldu/seccion/index.html
+++ b/Aldu/seccion/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Audios Aldu</title>
+    <title>Seccion Aldu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Firebase -->
@@ -24,8 +24,11 @@
             <h2>Aldi Resuelve</h2>
         </div>
         <div>
-            <h3>Manda un audio o texto diciendo alguna cosa que</h3>
-            <h3>para la sociedad esten normalizadas pero para vos sean una redflag</h3>
+            <h1>Amiguitas/amiguitos estando en pareja</h1>
+        </div>
+        <div>
+            <h3>Manda un audio o texto diciendo alguna o algunas</h3>
+            <h3>actitudes/acciones que te hacen dar cuenta cuando tu pareja tiene una amiguita/amiguito</h3>
         </div>
     </div>
     
