--- a/suika/index.html
+++ b/suika/index.html
@@ -6,214 +6,213 @@
   <title>Suika Twitch Game</title>
   <meta property="og:title" content="Suika Twitch Game" />
   <style>
-    @import url(https://fonts.bunny.net/css?family=azeret-mono:400,700,900);
+  @import url(https://fonts.bunny.net/css?family=azeret-mono:400,700,900);
+  :root {
+    --col-bg: #e5d4ff;
+    --col-bg-light: #d4b8fd;
+    --col-bg-lighter: #c096ff;
+    --col-primary: #9146ff;
+    --col-primary-dark: #634e83;
+    --col-primary-light: #c096ff;
+    --col-shadow: rgba(0, 0, 0, 0.25);
+    --col-white: #fff;
+  }
 
-    :root {
-      --col-bg: #e5d4ff;
-      --col-bg-light: #d4b8fd;
-      --col-bg-lighter: #c096ff;
-      --col-primary: #9146ff;
-      --col-primary-dark: #634e83;
-      --col-primary-light: #c096ff;
-      --col-shadow: rgba(0, 0, 0, 0.25);
-      --col-white: #fff;
-    }
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+  }
 
-    * {
-      box-sizing: border-box;
-      padding: 0;
-      margin: 0;
-      line-height: 1;
-    }
+  body {
+    background-color: var(--col-bg);
+    font-family: 'Azeret Mono', sans-serif;
+  }
 
-    body {
-      background-color: var(--col-bg);
-      font-family: 'Azeret Mono', sans-serif;
-    }
+  .container {
+    width: 100%;
+    max-width: 640px;
+    margin: 0 auto;
+    height: 100vh;
+  }
 
-    .container {
-      width: 100%;
-      max-width: 640px;
-      margin: 0 auto;
-      height: 100vh;
-    }
+  #game-canvas {
+    position: relative;
+  }
 
-    #game-canvas {
-      position: relative;
-    }
+  #game-ui {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    user-select: none;
+    font-weight: 700;
+    display: none;
+    transform-origin: top left;
+    color: var(--col-primary-dark);
+  }
 
-    #game-ui {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      user-select: none;
-      font-weight: 700;
-      display: none;
-      transform-origin: top left;
-      color: var(--col-primary-dark)
-    }
+  #game-score {
+    position: absolute;
+    width: 100%;
+    border-bottom: 0.2vh dotted #333;
+    font-size: 7vh;
+    font-weight: 900;
+    padding-left: 2vw;
+    color: var(--col-bg-lighter);
+    text-shadow: 0.5vw 0.5vw 0 var(--col-primary), -0.5vw -0.5vw 0 var(--col-primary), -0.5vw 0.5vw 0 var(--col-primary), 0.5vw -0.5vw 0 var(--col-primary);
+  }
 
-    #game-score {
-      position: absolute;
-      width: 100%;
-      border-bottom: 2px dotted #333;
-      font-size: 84px;
-      font-weight: 900;
-      padding-left: 16px;
-      color: var(--col-bg-lighter);
-      text-shadow: 3px 3px 0 var(--col-primary), -3px -3px 0 var(--col-primary), -3px 3px 0 var(--col-primary), 3px -3px 0 var(--col-primary);
-    }
+  #game-start-container {
+    position: absolute;
+    top: 75vh; /* Ajustado según viewport height */
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 10; /* Asegúrate de que esté sobre el canvas */
+  }
 
-    #game-start-container {
-      position: absolute;
-      top: 75%; /* Ajusta según sea necesario */
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      z-index: 10; /* Asegúrate de que esté sobre el canvas */
-    }
+  #game-end-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--col-shadow);
+  }
 
-    #game-end-container {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-items: center;
-      background-color: var(--col-shadow);
-    }
+  #game-end {
+    text-align: center;
+    padding: 4vh 6vw;
+    background-color: var(--col-bg-lighter);
+    border: 0.5vh solid var(--col-primary);
+    box-shadow: 0 0.5vh 5vw var(--col-shadow);
+    border-radius: 3vh;
+    margin: 0 auto;
+    pointer-events: initial;
+    user-select: initial;
+  }
 
-    #game-end {
-      text-align: center;
-      padding: 32px 48px;
-      background-color: var(--col-bg-lighter);
-      border: 5px solid var(--col-primary);
-      box-shadow: 0 4px 32px var(--col-shadow);
-      border-radius: 32px;
-      margin: 0 auto;
-      pointer-events: initial;
-      user-select: initial;
-    }
+  #game-end-title {
+    font-weight: 700;
+    font-size: 5vh;
+    color: var(--col-primary-dark);
+  }
 
-    #game-end-title {
-      font-weight: 700;
-      font-size: 48px;
-      color: var(--col-primary-dark);
-    }
+  #game-end-link, #boton-jugar, .button-top-left {
+    display: inline-block;
+    color: var(--col-white);
+    font-size: 2.5vh;
+    text-decoration: none;
+    background-color: var(--col-primary-light);
+    padding: 2vh;
+    margin-top: 2vh;
+    border-radius: 2vh;
+    box-shadow: 0.5vw 0.5vw 0 var(--col-shadow);
+  }
 
-    #game-end-link, #boton-jugar, .button-top-left {
-      display: inline-block;
-      color: var(--col-white);
-      font-size: 24px;
-      text-decoration: none;
-      background-color: var(--col-primary-light);
-      padding: 16px;
-      margin-top: 16px;
-      border-radius: 16px;
-      box-shadow: 4px 4px 0 var(--col-shadow);
-    }
-    
-    #boton-jugar, .button-top-left {
-      margin-top: 24px;
-      padding: 24px;
-      padding-right: 60px;
-      padding-left: 60px;
-      border-radius: 24px;
-    }
+  #boton-jugar, .button-top-left {
+    margin-top: 3vh;
+    padding: 3vh;
+    padding-right: 6vw;
+    padding-left: 6vw;
+    border-radius: 2.5vh;
+  }
 
-    .button-top-left {
-      position: fixed;
-      top: 10vh; /* Ajustado a viewport height */
-      left: 5vw; /* Ajustado a viewport width */
-      transform: translateY(-50%);
-      padding: 10px 20px;
-      border-radius: 16px;
-      cursor: pointer;
-      z-index: 100;
-    }
+  .button-top-left {
+    position: fixed;
+    top: 10vh;
+    left: 5vw;
+    transform: translateY(-50%);
+    padding: 1vh 2vw;
+    border-radius: 2vh;
+    cursor: pointer;
+    z-index: 100;
+  }
 
-    #game-end-link:hover, #boton-jugar:hover, .button-top-left:hover {
-      background-color: var(--col-primary);
-      box-shadow: 6px 6px 0 var(--col-shadow);
-    }
+  #game-end-link:hover, #boton-jugar:hover, .button-top-left:hover {
+    background-color: var(--col-primary);
+    box-shadow: 0.5vw 0.5vw 0 var(--col-shadow);
+  }
 
-    #game-status {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      height: 48px;
-      background-color: var(--col-bg-lighter);
-      display: flex;
-    }
+  #game-status {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 5vh;
+    background-color: var(--col-bg-lighter);
+    display: flex;
+  }
 
-    .game-status-item {
-      display: flex;
-      line-height: 1;
-      align-items: center;
-      margin-right: 32px;
-    }
+  .game-status-item {
+    display: flex;
+    line-height: 1;
+    align-items: center;
+    margin-right: 3vw;
+  }
 
-    .game-status-label {
-      color: #666;
-      font-size: 16px;
-      margin-left: 24px;
-      margin-right: 8px;
-    }
+  .game-status-label {
+    color: #666;
+    font-size: 2vh;
+    margin-left: 2vw;
+    margin-right: 1vw;
+  }
 
-    #game-highscore-value {
-      color: #333;
-      font-weight: 700;
-      font-size: 24px;
-    }
+  #game-highscore-value {
+    color: #333;
+    font-weight: 700;
+    font-size: 3vh;
+  }
 
-    #game-next-fruit {
-      width: 24px;
-      height: 24px;
-    }
+  #game-next-fruit {
+    width: 3vh;
+    height: 3vh;
+  }
 
-    /* Popup de instrucciones */
-    .popup {
-      display: none;
-      position: fixed;
-      top: 30%;
-      left: 8.5%;
-      transform: translateY(-50%);
-      z-index: 1000;
-      width: 300px;
-      background-color: white;
-      border: 2px solid #888;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-    }
+  /* Popup de instrucciones */
+  .popup {
+    display: none;
+    position: fixed;
+    top: 30vh;
+    left: 8vw;
+    transform: translateY(-50%);
+    z-index: 1000;
+    width: 40vw;
+    background-color: white;
+    border: 0.2vh solid #888;
+    box-shadow: 0 0.5vh 1vw rgba(0, 0, 0, 0.1);
+    padding: 2vh;
+  }
 
-    .popup-content {
-      text-align: center;
-    }
+  .popup-content {
+    text-align: center;
+  }
 
-    #close-popup {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 24px;
-      cursor: pointer;
-    }
+  #close-popup {
+    position: absolute;
+    top: 1vh;
+    right: 1vh;
+    font-size: 3vh;
+    cursor: pointer;
+  }
 
-    /* Imagen Guía - Lado derecho */
-    #bg-guia-container {
-      display: block; /* Ahora visible */
-      position: fixed;
-      top: 50vh; /* Ajustado a viewport height */
-      right: 5vw; /* Ajustado a viewport width */
-      transform: translateY(-50%);
-      z-index: 100;
-    }
+  /* Imagen Guía - Lado derecho */
+  #bg-guia-container {
+    display: block;
+    position: fixed;
+    top: 50vh;
+    right: 5vw;
+    transform: translateY(-50%);
+    z-index: 100;
+  }
 
-    #bg-guia {
-      width: 20vw; /* Ajusta a un tamaño relativo al ancho de la pantalla */
-      height: auto;
-    }
+  #bg-guia {
+    width: 20vw;
+    height: auto;
+  }
   </style>
 </head>
 <body>
