--- a/suika/index.html
+++ b/suika/index.html
@@ -102,7 +102,7 @@ body {
   color: var(--col-primary-dark);
 }
 
-#game-end-link, #boton-jugar, .button-top-left, .button-competition {
+#game-end-link, #boton-jugar, .button-top-left, .button-competition, .button-top-link {
   display: inline-block;
   color: var(--col-white);
   font-size: 2.5vh;
@@ -114,7 +114,7 @@ body {
   box-shadow: 0.5vw 0.5vw 0 var(--col-shadow);
 }
 
-#boton-jugar, .button-top-left, .button-competition {
+#boton-jugar, .button-top-left, .button-competition, .button-top-link {
   margin-top: 3vh;
   padding: 3vh;
   padding-right: 6vw;
@@ -122,7 +122,7 @@ body {
   border-radius: 2.5vh;
 }
 
-.button-top-left, .button-competition {
+.button-top-left, .button-competition, .button-top-link {
   position: fixed;
   top: 10vh;
   left: 7.5vw;
@@ -138,7 +138,17 @@ body {
   left: 8vw;
 }
 
-#game-end-link:hover, #boton-jugar:hover, .button-top-left:hover, .button-competition:hover {
+.button-top-link {
+  top: 85vh;
+  left: 11vw;
+}
+
+.button-top-link a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; /* Usa el color del botón en lugar del azul predeterminado del enlace */
+}
+
+#game-end-link:hover, #boton-jugar:hover, .button-top-left:hover, .button-competition:hover, .button-top-link:hover {
   background-color: var(--col-primary);
   box-shadow: 0.5vw 0.5vw 0 var(--col-shadow);
 }
@@ -261,12 +271,14 @@ body {
         <p>- La tabla de posiciones no se modifica sola, la tengo que modificar a mano, asi que si ven que el puntaje de ustedes es mayor que alguno de la tabla y no se modifica no se preocupen.</p>
       </div>
     </div>
+      <button id="btn-instrucciones" class="button-top-link">
+        <a href="https://daantesiito.github.io/suika/top" target="_blank" rel="noopener noreferrer">TOP</a>
+      </button>
     <div id="bg-guia-container">
       <img id="bg-guia" src="./assets/img/bg-guia.png" alt="Guía del juego">
     </div>     
       <div id="game-ui">
         <p id="game-score"></p>
-
         <div id="game-end-container">
           <div id="game-end">
             <div id="game-end-title">Perdiste!</div>
