agregando el top con redireccion del boton de la pagina

--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio al Pasto</title>
-    <link rel="icon" type="image/png" href="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/logo-F1.png?raw=true">
+    <title>TOP SUIKA TWITCH</title>
     <!-- animate -->
     <link rel="stylesheet" href="css/animate.min.css">
     <!-- bootstrap -->
