Agregando puntaje de tonga y agregando google analytics

--- a/suika/index.html
+++ b/suika/index.html
@@ -310,5 +310,15 @@ body {
 
   <script type="text/javascript" src="./matter.js"></script>
   <script type="text/javascript" src="./index.js?v=4"></script>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7P02XGMX0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X7P02XGMX0');
+  </script>
 </body>
 </html>
