--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -179,6 +179,12 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
+                                <td><a href="https://www.twitch.tv/tongx_">Tonga</a></td>
+                                <td>3701</td>
+                                <td><a href="https://www.twitch.tv/tongx_/clip/CourageousRealFriesLitty-R30fnVUl84vDtH72">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
                                 <td><a href="https://www.twitch.tv/harryalexok">HarryAlexOk</a></td>
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
@@ -207,5 +213,15 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/scripts.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7P02XGMX0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-X7P02XGMX0');
+    </script>
 </body>
 </html>
