--- a/suika/top/index.html
+++ b/suika/top/index.html
@@ -185,6 +185,12 @@
                             </tr>
                             <tr>
                                 <td>2</td>
+                                <td><a href="https://www.twitch.tv/chabon">Chabon</a></td>
+                                <td>3348</td>
+                                <td><a href="https://www.twitch.tv/chabon/clip/SucculentSplendidUdonDxCat-tUwiNlt1pk9Az74I">Clip</a></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
                                 <td><a href="https://www.twitch.tv/harryalexok">HarryAlexOk</a></td>
                                 <td>2859</td>
                                 <td><a href="https://www.twitch.tv/harryalexok/clip/GleamingUglyTomatoAMPTropPunch-21ojQ4kqVsoed0Z3">Clip</a></td>
